# redhat_status_advanced

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  comprehensive-docker-test.sh  config.json  coverage.xml  docker-compose.test.yml  fix-docker-permissions.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  run_tests_venv.sh  test-docker.sh  test-podman.sh  verify-docker-setup.sh
operator/cr/: redhatstatus.io_v1alpha1_redhatstatus_cr.yaml
operator/crd/: redhatstatus.io_redhatstatuses_crd.yaml
redhat_status/: main.py
redhat_status/analytics/: ai_analytics.py
redhat_status/config/: config_manager.py
redhat_status/core/: api_client.py  cache_manager.py
redhat_status/database/: db_manager.py
redhat_status/exporters/: __init__.py  prometheus_exporter.py
redhat_status/notifications/: notification_manager.py
redhat_status/presentation/: __init__.py  presenter.py
redhat_status/web/: __init__.py  app.py
tests/: __init__.py  container_test_utils.py  test_ai_analytics.py  test_api_client.py  test_cache_manager.py  test_config_manager.py  test_data_models.py  test_database_manager.py  test_decorators.py  test_docker_containers.py  test_docker_integration.py  test_docker_permissions.py  test_integration.py  test_main.py  test_notification_manager.py  test_podman_containers.py  test_podman_integration.py  test_presenter.py  test_prometheus_exporter.py  test_web_app.py
