[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redhat_status"
version = "3.1.0"
description = "A comprehensive, enterprise-grade Python monitoring solution for Red Hat services."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["redhat", "status", "monitoring", "api"]
authors = [
  { name = "Jules", email = "jules@example.com" }
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
]

[project.urls]
"Homepage" = "https://github.com/example/redhat-status-checker"
"Bug Tracker" = "https://github.com/example/redhat-status-checker/issues"

[project.scripts]
redhat-status = "redhat_status.main:main"
